<resources>
    <string name="app_name">KasirGo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu_admin">Admin Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_admin">Management Admin</string>
    <string name="menu_karyawan">Management Karyawan</string>
    <string name="menu_barang">Management Barang</string>
    <string name="menu_voucers">Management Vouchers</string>
    <string name="menu_member">Management Member</string>
    <string name="action_logout">Logout</string>

</resources>