<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_admin">

    <fragment
        android:id="@+id/nav_admin"
        android:name="com.example.kasirgo.ui.admin.AdminFragment"
        android:label="@string/menu_admin"
        tools:layout="@layout/fragment_admin" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.kasirgo.ui.karyawan.KaryawanFragment"
        android:label="@string/menu_karyawan"
        tools:layout="@layout/fragment_karyawan" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.kasirgo.ui.barang.BarangFragment"
        android:label="@string/menu_barang"
        tools:layout="@layout/fragment_barang" />
    <fragment
        android:id="@+id/nav_voucer"
        android:name="com.example.kasirgo.ui.Vouchers.VouchersFragment"
        android:label="@string/menu_voucers"
        tools:layout="@layout/fragment_vouchers" />
    <fragment
        android:id="@+id/nav_member"
        android:name="com.example.kasirgo.ui.member.MemberFragment"
        android:label="@string/menu_member"
        tools:layout="@layout/fragment_member" />
</navigation>